# GameOfLife

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: ball.rs  basic_simulation_display.rs  basic_simulations.rs  basic_spaceship.rs  display_customization.rs  fittest_generation.rs  fittest_seed.rs  horizontal_loop.rs  rectangle.rs  save_history.rs  testing.rs  vertical_loop.rs
src/: cell.rs  lib.rs  main.rs  seeds.rs  simulation.rs  simulation_builder.rs  simulation_window.rs  test_cases.rs  testing.rs
